Fix incorrect HTML tag from <selection> to <section> in index.html

--- a/01-single-page-cv/index.html
+++ b/01-single-page-cv/index.html
@@ -167,7 +167,7 @@
             </ul>
         </section>
 
-        <selection>
+        <section>
             <h2>Certifications</h2>
 
             <hr aria-hidden="true">
@@ -178,7 +178,7 @@
                 <li>The Odin Project - Full Stack JavaScript Path (completed 2023)</li>
                 <li>Meta Front-End Developer Professional Certificate (Coursera, 2023)</li>
             </ul>
-        </selection>
+        </section>
 
         <section>
             <h2>Languages</h2>
